# pong-for-learn

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
assets/groups/: level1.cfg  menu.cfg
assets/levels/: level1.cfg
backup/src/resources/: AssetManager.cpp  AssetManager.hpp
src/: CMakeLists.txt  main.cpp  pch.hpp
src/core/: Game.cpp  Game.hpp  GameConfig.hpp  README.md
src/entities/: Ball.cpp  Ball.hpp  Enemy.cpp  Enemy.hpp  IEntity.hpp  Player.cpp  Player.hpp
src/resources/: AssetManager.cpp  AssetManager.hpp  AssetManager.md  AudioManager.cpp  AudioManager.hpp  MusicLoopMode.hpp
src/save/: SaveData.hpp  SaveError.hpp  SaveManager.cpp  SaveManager.hpp  SaveResult.hpp  SaveSerializer.cpp  SaveSerializer.hpp  SaveSlotInfo.hpp
src/scenes/: GameplayScene.cpp  GameplayScene.hpp  IScene.hpp  MenuScene.cpp  MenuScene.hpp  SceneRequest.hpp
src/ui/: Button.cpp  Button.hpp  IWidget.hpp  Label.cpp  Label.hpp  MenuList.cpp  MenuList.hpp  PauseOverlay.cpp  PauseOverlay.hpp
src/utility/: utilities.hpp
src/world/: GameLevel.cpp  GameLevel.hpp  ILevel.hpp  LevelData.hpp  LevelLoader.cpp  LevelLoader.hpp
tests/: CMakeLists.txt
tests/resources-test/: CMakeLists.txt  test-AssetManager.cpp
